Playlist search improvements